--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,92 @@
-/* Barra de navegacion */
-.navbar {
-    background-color: #d2d4d8;
-    width: 100%;
-    overflow: hidden;
-    font-family: 'Nunito Sans', sans-serif;
-    position: fixed;
-    z-index: 100;
-    top: 0; 
-}
-.navbar a {
-    float: left;
-    display: block;
-    color: #12203E;
-    font-weight: 800;
-    text-align: center;
-    padding: 14px 14px;
-    text-decoration: none;
-}
-.navbar a:hover {
-    background-color:white;
-    color: black;
-} 
-
-
-/* Estilos generales*/
-
-*{ margin: 0;
-   padding: 0;
-  }
 body {
-	background: #E9ECF4;
-	color:#12203E;
-	font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.6;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
 }
-main {
-  margin-top: 50px; 
-}
-
-h1 {
-  font-size: 3rem;
-  font-family: 'Nunito Sans', sans-serif;
-}
-h2 {
-  font-size: 2rem;
-  font-family: 'Nunito Sans', sans-serif;
+header {
+  background-color: #ffcc80;
+  padding: 20px;
   text-align: center;
 }
-h3 {
-  font-size: 1rem;
-  font-family: 'Nunito Sans', sans-serif;
+header h1 {
+  font-family: 'Chewy', cursive;
+  margin: 0;
+  color: #555;
 }
-h4 {
-  font-size: 0.75rem;
-  font-family: 'Nunito Sans', sans-serif;
-  font-style: italic;
-} 
-h5{
-  font-size: 0.5rem;
-  font-family: 'Nunito Sans', sans-serif;
-  font-style: italic;
+header ul {
+  list-style: none;
+  padding: 0;
+}
+header ul li {
+  display: inline;
+  margin-right: 15px;
+}
+header ul li a:hover {
+  color: #f2f2f2;
+}
+
+header ul li a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+header ul li a.active {
+  color: #555;
+}
+h2 {
+  font-family: 'Chewy', cursive;
+  color: #555;
+
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+.container h3 {
+  font-family: 'Chewy', cursive;
+  color: #555;
+}
+.container p {
+  margin-bottom: 20px;
+}
+.image {
+  float: right;
+  margin: 0 0 20px 20px;
+  max-width: 25%;
+  height: auto;
 }
 
 
+.image2 {
+  float: left;
+  margin: 0 20px 20px 0;
+  max-width: 25%;
+  height: auto;
+}
+.article {
+float: left;
+width: 70%;
+background-color: #FFF;
+padding: 10px;
+margin: 10px;
+border: 1px solid #CCC;
+}
+.image3 {
+  float: right;
+  clear: both;
+  margin: 0 0 20px 20px;
+  max-width: 25%;
+  height: auto;
+}
+.footer {
+  background-color: #ffcc80;
+  text-align: center;
+  padding: 10px;
+  clear: both;
+}
