--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -1,43 +1,10 @@
 body {
-    font-family: "Lucida Console", "Courier New", monospace;
-    background: linear-gradient(to right, rgb(189, 189, 255), rgb(255, 233, 236));
-    padding: 0;
-    margin: 0;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #04AA6D;
-}
-
-h1 {
-    background-color: black;
-    padding: 10px;
-    margin: 0;
-    color: #92a4ff;
+    font-family: 'Montserrat', sans-serif;
+  line-height: 1.6;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
 }
 
 input[type=text],
@@ -54,9 +21,10 @@ select {
 }
 
 input[type=submit] {
+    font-size: large;
+    font-weight: bold;
     width: 100%;
-    background-color: #ffcc80;
-    color: rgb(13, 13, 13);
+    background-color: #e7b365;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -65,20 +33,13 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #bc9150
+    background-color: #f0c380
 }
 
 div.contenedor-formulario {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-}
-.footer {
-    background-color: #333;
-    color: #FFF;
-    padding: 10px;
-    text-align: center;
-    clear: both;
 }
 
 .contenedor-radio-motivo {
