actualizar datos y estilos de tabla

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -40,3 +40,11 @@
   header ul li a.active {
     color: #555; /* Color del enlace activo */
   }
+  /* Estilo del subtítulo principal */
+h2 {
+  
+  color: #555; /* Color del texto */
+  margin: 0; /* Eliminar margen */
+  padding: 0; /* Eliminar relleno */
+  text-align: center; /* Centrar texto */
+}
